feat: support Nacos v2 as ServiceRegistry (2/n)

--- a/controller/tests/testdata/services/docker-compose.yml
+++ b/controller/tests/testdata/services/docker-compose.yml
@@ -1,24 +1,43 @@
 services:
-  nacos:
+  nacos_v1:
+    image: nacos/nacos-server:v1.4.6-slim
+    env_file:
+     - env/nacos.env
+    restart: unless-stopped
+    ports:
+     - "8848:8848"
+    networks:
+      - service
+
+  nacos_v1_2:
     image: nacos/nacos-server:v1.4.6-slim
     env_file:
       - env/nacos.env
-    # all services should have this restart policy, so that we don't need to
-    # restart them manually after the dev machine reboots
     restart: unless-stopped
     ports:
       - "8848:8848"
     networks:
-      service:
-  nacos2:
-    image: nacos/nacos-server:v1.4.6-slim
+      - service
+
+  nacos_v2:
+    image: nacos/nacos-server:v2.2.3-slim
     env_file:
       - env/nacos.env
     restart: unless-stopped
     ports:
-      - "8849:8848"
+      - "8850:8848"
     networks:
-      service:
+      - service
+
+  nacos_v2_2:
+    image: nacos/nacos-server:v2.2.3-slim
+    env_file:
+      - env/nacos.env
+    restart: unless-stopped
+    ports:
+      - "8851:8848"
+    networks:
+      - service
   consul:
     image: docker.m.daocloud.io/library/consul:1.15.4
     restart: unless-stopped
@@ -37,8 +56,6 @@ services:
     command: agent -server -bootstrap -client=0.0.0.0
     networks:
       service:
-
-
 
 networks:
   service:
